; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_formats.c_gl_format_type.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_formats.c_gl_format_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_format = type { i64, i32 }

@GL_FLOAT = common dso_local global i64 0, align 8
@MPGL_TYPE_FLOAT = common dso_local global i32 0, align 4
@MPGL_TYPE_UINT = common dso_local global i32 0, align 4
@MPGL_TYPE_UNORM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gl_format_type(%struct.gl_format* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gl_format*, align 8
  store %struct.gl_format* %0, %struct.gl_format** %3, align 8
  %4 = load %struct.gl_format*, %struct.gl_format** %3, align 8
  %5 = icmp ne %struct.gl_format* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

7:                                                ; preds = %1
  %8 = load %struct.gl_format*, %struct.gl_format** %3, align 8
  %9 = getelementptr inbounds %struct.gl_format, %struct.gl_format* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @GL_FLOAT, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %7
  %14 = load i32, i32* @MPGL_TYPE_FLOAT, align 4
  store i32 %14, i32* %2, align 4
  br label %25

15:                                               ; preds = %7
  %16 = load %struct.gl_format*, %struct.gl_format** %3, align 8
  %17 = getelementptr inbounds %struct.gl_format, %struct.gl_format* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i64 @gl_integer_format_to_base(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i32, i32* @MPGL_TYPE_UINT, align 4
  store i32 %22, i32* %2, align 4
  br label %25

23:                                               ; preds = %15
  %24 = load i32, i32* @MPGL_TYPE_UNORM, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %21, %13, %6
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @gl_integer_format_to_base(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
